GNOME Bugzilla – Bug 740392
rtspsrc: mikey base64 decoded key-mgmt leak
Last modified: 2014-11-20 10:23:35 UTC
Tiny leak: base64 decoded key-mgmt data is not freed after parsing.
Created attachment 291041 [details] [review] free base64 decoded key-mgmt data
commit 00ca83629bf39b92d181c0af80de1a3eb591e16c Author: Aleix Conchillo Flaqué <aleix@oblong.com> Date: Wed Nov 19 15:06:00 2014 -0800 rtspsrc: fix leak for mikey base64 decoded key-mgmt https://bugzilla.gnome.org/show_bug.cgi?id=740392